--- a/MBTIApp/app/src/main/res/layout/fragment_account.xml
+++ b/MBTIApp/app/src/main/res/layout/fragment_account.xml
@@ -24,6 +24,7 @@
                 android:src="@drawable/baseline_account_circle_24" />
 
             <TextView
+                android:id="@+id/tv_full_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|center_vertical"
@@ -33,6 +34,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tv_email_address"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|center_vertical"
