--- a/MBTIApp/app/src/main/res/layout/activity_login.xml
+++ b/MBTIApp/app/src/main/res/layout/activity_login.xml
@@ -53,6 +53,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <EditText
+                android:id="@+id/et_email_address"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -62,11 +63,12 @@
                 android:drawableStart="@drawable/baseline_email_24"
                 android:drawablePadding="8dp"
                 android:hint="@string/hint_email_address"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:padding="16dp" />
 
             <EditText
+                android:id="@+id/et_password"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
