Add Login Back End API Fetching and API Connections

--- a/MBTIApp/app/src/main/res/layout/activity_register.xml
+++ b/MBTIApp/app/src/main/res/layout/activity_register.xml
@@ -48,6 +48,7 @@
 
 
             <EditText
+                android:id="@+id/et_full_name"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -63,6 +64,7 @@
 
 
             <EditText
+                android:id="@+id/et_email_address"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -72,12 +74,13 @@
                 android:drawableStart="@drawable/baseline_email_24"
                 android:drawablePadding="8dp"
                 android:hint="@string/hint_email_address"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:maxLines="1"
                 android:padding="16dp" />
 
 
             <EditText
+                android:id="@+id/et_password"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -93,6 +96,7 @@
 
 
             <EditText
+                android:id="@+id/et_re_password"
                 style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -108,16 +112,19 @@
 
 
             <RadioGroup
+                android:id="@+id/rg_gender"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rb_male" />
 
                 <com.google.android.material.radiobutton.MaterialRadioButton
+                    android:id="@+id/rb_female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rb_female" />
