--- a/MBTIApp/app/src/main/res/layout/activity_mbti.xml
+++ b/MBTIApp/app/src/main/res/layout/activity_mbti.xml
@@ -85,68 +85,30 @@
                     app:layout_constraintStart_toStartOf="parent">
 
 
+
                     <RadioButton
-                        android:id="@+id/rb_1"
-                        android:layout_width="55dp"
+                        android:id="@+id/rb_no"
+                        android:layout_width="80dp"
                         android:layout_height="55dp"
-                        android:layout_marginHorizontal="8dp"
+                        android:layout_marginHorizontal="32dp"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
                         android:elevation="4dp"
                         android:padding="16dp"
-                        android:text="1"
+                        android:text="@string/mbti_rb_no"
                         android:textAlignment="center"
                         android:textColor="@drawable/text_color" />
 
                     <RadioButton
-                        android:id="@+id/rb_2"
-                        android:layout_width="55dp"
+                        android:id="@+id/rb_yes"
+                        android:layout_width="80dp"
                         android:layout_height="55dp"
-                        android:layout_marginHorizontal="8dp"
+                        android:layout_marginHorizontal="32dp"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
                         android:elevation="4dp"
                         android:padding="16dp"
-                        android:text="2"
-                        android:textAlignment="center"
-                        android:textColor="@drawable/text_color" />
-
-                    <RadioButton
-                        android:id="@+id/rb_3"
-                        android:layout_width="55dp"
-                        android:layout_height="55dp"
-                        android:layout_marginHorizontal="8dp"
-                        android:background="@drawable/radio_selector"
-                        android:button="@android:color/transparent"
-                        android:elevation="4dp"
-                        android:padding="16dp"
-                        android:text="3"
-                        android:textAlignment="center"
-                        android:textColor="@drawable/text_color" />
-
-                    <RadioButton
-                        android:id="@+id/rb_4"
-                        android:layout_width="55dp"
-                        android:layout_height="55dp"
-                        android:layout_marginHorizontal="8dp"
-                        android:background="@drawable/radio_selector"
-                        android:button="@android:color/transparent"
-                        android:elevation="4dp"
-                        android:padding="16dp"
-                        android:text="4"
-                        android:textAlignment="center"
-                        android:textColor="@drawable/text_color" />
-
-                    <RadioButton
-                        android:id="@+id/rb_5"
-                        android:layout_width="55dp"
-                        android:layout_height="55dp"
-                        android:layout_marginHorizontal="8dp"
-                        android:background="@drawable/radio_selector"
-                        android:button="@android:color/transparent"
-                        android:elevation="4dp"
-                        android:padding="16dp"
-                        android:text="5"
+                        android:text="@string/mbti_rb_yes"
                         android:textAlignment="center"
                         android:textColor="@drawable/text_color" />
 
