--- a/MBTIApp/app/src/main/res/values/colors.xml
+++ b/MBTIApp/app/src/main/res/values/colors.xml
@@ -1,66 +1,63 @@
-
-
 <resources>
-    <color name="seed">#00AA13</color>
-    <color name="md_theme_light_primary">#006E08</color>
+    <color name="seed">#005cbb</color>
+    <color name="md_theme_light_primary">#005CBB</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#76FF66</color>
-    <color name="md_theme_light_onPrimaryContainer">#002201</color>
-    <color name="md_theme_light_secondary">#53634E</color>
+    <color name="md_theme_light_primaryContainer">#D7E2FF</color>
+    <color name="md_theme_light_onPrimaryContainer">#001B3F</color>
+    <color name="md_theme_light_secondary">#565E71</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#D7E8CD</color>
-    <color name="md_theme_light_onSecondaryContainer">#121F0E</color>
-    <color name="md_theme_light_tertiary">#386569</color>
+    <color name="md_theme_light_secondaryContainer">#DAE2F9</color>
+    <color name="md_theme_light_onSecondaryContainer">#131C2B</color>
+    <color name="md_theme_light_tertiary">#705574</color>
     <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#BCEBEF</color>
-    <color name="md_theme_light_onTertiaryContainer">#002022</color>
+    <color name="md_theme_light_tertiaryContainer">#FAD8FD</color>
+    <color name="md_theme_light_onTertiaryContainer">#29132E</color>
     <color name="md_theme_light_error">#BA1A1A</color>
     <color name="md_theme_light_errorContainer">#FFDAD6</color>
     <color name="md_theme_light_onError">#FFFFFF</color>
     <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FCFDF6</color>
-    <color name="md_theme_light_onBackground">#1A1C18</color>
-    <color name="md_theme_light_surface">#FCFDF6</color>
-    <color name="md_theme_light_onSurface">#1A1C18</color>
-    <color name="md_theme_light_surfaceVariant">#DFE4D8</color>
-    <color name="md_theme_light_onSurfaceVariant">#43483F</color>
-    <color name="md_theme_light_outline">#73796E</color>
-    <color name="md_theme_light_inverseOnSurface">#F1F1EB</color>
-    <color name="md_theme_light_inverseSurface">#2F312D</color>
-    <color name="md_theme_light_inversePrimary">#56E24B</color>
+    <color name="md_theme_light_background">#FDFBFF</color>
+    <color name="md_theme_light_onBackground">#1A1B1F</color>
+    <color name="md_theme_light_surface">#FDFBFF</color>
+    <color name="md_theme_light_onSurface">#1A1B1F</color>
+    <color name="md_theme_light_surfaceVariant">#E0E2EC</color>
+    <color name="md_theme_light_onSurfaceVariant">#44474E</color>
+    <color name="md_theme_light_outline">#74777F</color>
+    <color name="md_theme_light_inverseOnSurface">#F2F0F4</color>
+    <color name="md_theme_light_inverseSurface">#2F3033</color>
+    <color name="md_theme_light_inversePrimary">#ABC7FF</color>
     <color name="md_theme_light_shadow">#000000</color>
-    <color name="md_theme_light_surfaceTint">#006E08</color>
-    <color name="md_theme_light_outlineVariant">#C3C8BC</color>
+    <color name="md_theme_light_surfaceTint">#005CBB</color>
+    <color name="md_theme_light_outlineVariant">#C4C6D0</color>
     <color name="md_theme_light_scrim">#000000</color>
-    <color name="md_theme_dark_primary">#56E24B</color>
-    <color name="md_theme_dark_onPrimary">#003A02</color>
-    <color name="md_theme_dark_primaryContainer">#005304</color>
-    <color name="md_theme_dark_onPrimaryContainer">#76FF66</color>
-    <color name="md_theme_dark_secondary">#BBCBB2</color>
-    <color name="md_theme_dark_onSecondary">#263422</color>
-    <color name="md_theme_dark_secondaryContainer">#3C4B37</color>
-    <color name="md_theme_dark_onSecondaryContainer">#D7E8CD</color>
-    <color name="md_theme_dark_tertiary">#A0CFD2</color>
-    <color name="md_theme_dark_onTertiary">#00373A</color>
-    <color name="md_theme_dark_tertiaryContainer">#1E4D51</color>
-    <color name="md_theme_dark_onTertiaryContainer">#BCEBEF</color>
+    <color name="md_theme_dark_primary">#ABC7FF</color>
+    <color name="md_theme_dark_onPrimary">#002F66</color>
+    <color name="md_theme_dark_primaryContainer">#00458F</color>
+    <color name="md_theme_dark_onPrimaryContainer">#D7E2FF</color>
+    <color name="md_theme_dark_secondary">#BEC6DC</color>
+    <color name="md_theme_dark_onSecondary">#283041</color>
+    <color name="md_theme_dark_secondaryContainer">#3E4759</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DAE2F9</color>
+    <color name="md_theme_dark_tertiary">#DDBCE0</color>
+    <color name="md_theme_dark_onTertiary">#3F2844</color>
+    <color name="md_theme_dark_tertiaryContainer">#573E5C</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FAD8FD</color>
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1A1C18</color>
-    <color name="md_theme_dark_onBackground">#E2E3DD</color>
-    <color name="md_theme_dark_surface">#1A1C18</color>
-    <color name="md_theme_dark_onSurface">#E2E3DD</color>
-    <color name="md_theme_dark_surfaceVariant">#43483F</color>
-    <color name="md_theme_dark_onSurfaceVariant">#C3C8BC</color>
-    <color name="md_theme_dark_outline">#8D9387</color>
-    <color name="md_theme_dark_inverseOnSurface">#1A1C18</color>
-    <color name="md_theme_dark_inverseSurface">#E2E3DD</color>
-    <color name="md_theme_dark_inversePrimary">#006E08</color>
+    <color name="md_theme_dark_background">#1A1B1F</color>
+    <color name="md_theme_dark_onBackground">#E3E2E6</color>
+    <color name="md_theme_dark_surface">#1A1B1F</color>
+    <color name="md_theme_dark_onSurface">#E3E2E6</color>
+    <color name="md_theme_dark_surfaceVariant">#44474E</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C6D0</color>
+    <color name="md_theme_dark_outline">#8E9099</color>
+    <color name="md_theme_dark_inverseOnSurface">#1A1B1F</color>
+    <color name="md_theme_dark_inverseSurface">#E3E2E6</color>
+    <color name="md_theme_dark_inversePrimary">#005CBB</color>
     <color name="md_theme_dark_shadow">#000000</color>
-    <color name="md_theme_dark_surfaceTint">#56E24B</color>
-    <color name="md_theme_dark_outlineVariant">#43483F</color>
+    <color name="md_theme_dark_surfaceTint">#ABC7FF</color>
+    <color name="md_theme_dark_outlineVariant">#44474E</color>
     <color name="md_theme_dark_scrim">#000000</color>
 </resources>
-
